# browser-locations

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  integration.yml  publish-dry-run.yml  publish.yml  security.yml
crates/arc-locations/: Cargo.toml  README.md
crates/arc-locations/src/: lib.rs
crates/arc-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
crates/brave-locations/: Cargo.toml  README.md
crates/brave-locations/src/: lib.rs
crates/brave-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
crates/browser-locations/: Cargo.toml  README.md
crates/browser-locations-core/: Cargo.toml  README.md
crates/browser-locations-core/src/: desktop_entry.rs  lib.rs
crates/browser-locations/examples/: print_all_browsers.rs
crates/browser-locations/src/: lib.rs
crates/browser-locations/tests/: integration.rs
crates/chrome-locations/: Cargo.toml  LICENSE  README.md
crates/chrome-locations/examples/: print_chrome_path.rs
crates/chrome-locations/src/: lib.rs
crates/chrome-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
crates/chromium-locations/: Cargo.toml  README.md
crates/chromium-locations/src/: lib.rs
crates/chromium-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
crates/edge-locations/: Cargo.toml  README.md
crates/edge-locations/src/: lib.rs
crates/edge-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
crates/firefox-locations/: Cargo.toml  README.md
crates/firefox-locations/src/: lib.rs
crates/firefox-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
crates/floorp-locations/: Cargo.toml  README.md
crates/floorp-locations/src/: lib.rs
crates/floorp-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
crates/helium-locations/: Cargo.toml  README.md
crates/helium-locations/examples/: print_helium_path.rs
crates/helium-locations/src/: lib.rs
crates/helium-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
crates/librewolf-locations/: Cargo.toml  README.md
crates/librewolf-locations/src/: lib.rs
crates/librewolf-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
crates/opera-locations/: Cargo.toml  README.md
crates/opera-locations/src/: lib.rs
crates/opera-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
crates/vivaldi-locations/: Cargo.toml  README.md
crates/vivaldi-locations/src/: lib.rs
crates/vivaldi-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
crates/zen-locations/: Cargo.toml  README.md
crates/zen-locations/src/: lib.rs
crates/zen-locations/tests/: any_latest.rs  any_stable.rs  channel_getters.rs
examples/: README.md
scripts/: setup-git-hooks.sh
test-support/: browser_suite.rs
