[workspace]
members = [
    "crates/arc-locations",
    "crates/brave-locations",
    "crates/browser-locations",
    "crates/browser-locations-core",
    "crates/chrome-locations",
    "crates/chromium-locations",
    "crates/edge-locations",
    "crates/firefox-locations",
    "crates/floorp-locations",
    "crates/helium-locations",
    "crates/librewolf-locations",
    "crates/opera-locations",
    "crates/vivaldi-locations",
    "crates/zen-locations",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.2.0"
repository = "https://github.com/shirshak55/browser-locations"
homepage = "https://github.com/shirshak55/browser-locations"
categories = ["os", "development-tools"]
keywords = ["browser", "chrome", "firefox", "executable", "path"]

[workspace.dependencies]
thiserror = "2.0.11"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = 1 }
unused_qualifications = "warn"

[workspace.lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = 1 }
