[package]
name = "browser-locations-core"
description = "Shared browser executable discovery engine and typed models."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
