[package]
name = "chromium-locations"
description = "Locate Chromium executables across desktop platforms."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
browser-locations-core = { path = "../browser-locations-core", version = "0.2.2" }

[lints]
workspace = true
