[package]
name = "edge-locations"
description = "Locate Microsoft Edge executables across desktop platforms."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
browser-locations-core = { path = "../browser-locations-core", version = "0.2.0" }

[lints]
workspace = true
